Fix potentialnpe when start/stopping the listener